--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,327 @@
+:root{
+  --main-color:#e84855;
+  --section-color:#f6f6f6;
+  --dark-mode: #23272A;
+}
+.main-color{
+  color:var(--main-color) !important
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+  font-family: 'Exo 2', sans-serif !important;}
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
 * {
   box-sizing: border-box;
 }
+button{
+  box-shadow: none !important;
+}
+/* dark mode  */
+/* dark mode for navbar  */
+  .dark .navbar{
+    background-color: var(--dark-mode) !important;
+  }
+  .dark .logo{
+    color: #fff;
+  }
+  .dark .nav-link{
+    color: #fff !important;
+  }
+  .dark .dark{
+    color: #fff;
+  }
+  .dark .navbar-toggler{
+    background-color: #fff;
+  }
+  .dark .offcanvas {
+    background-color: var(--dark-mode);
+  }
+  .dark .btn-close {
+    background-color: #fff !important;
+  }
+/* dark mode for navbar  */
+/* dark mode for header  */
+.dark header{
+  background-color: var(--dark-mode)
+}
+.dark header .text{
+  color: #fff;
+}
+/* dark mode for header  */
+/* dark mode for portfolio */
+.dark .portfolio {
+  background-color: var(--dark-mode);
+}
+.dark .portfolio .all-projects button{
+  color: #fff !important;
+}
+.dark .portfolio .all-projects button.active{
+  color: var(--main-color) !important;
+}
+.dark .portfolio .section-title h2 {
+color: #fff ;
+}
+.dark .portfolio .section-title h2::after {
+  background-color: #fff ;
+}
+
+/* dark mode for portfolio */
+/* dark mode for about  */
+.dark .about{
+  background-color: var(--dark-mode);
+  color: #fff !important;
+}
+.dark .about .section-title h2::after{
+  background-color: #fff ;
+}
+.dark .about .section-title:hover h2::after{
+  background-color: var(--main-color) ;
+}
+.dark .about .text{
+  background-color: #7b1111 !important;
+}
+/* dark mode for about  */
+/* dark mode  */
+/* navbar */
+.navbar{
+      box-shadow:0 10px 15px rgb(25 25 25 / 10%);
+      flex-wrap: nowrap;
+}
+  .logo{
+    font-size: 1.6rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 1px black;
+  }
+  .dark .logo:hover{
+    color:#fff ;
+  }
+  .logo>span {
+    color: var(--main-color);
+  }
+   .nav-link{
+    font-size: 18px;
+    color: #222 !important;
+    font-weight: 600;;
+    letter-spacing: 1.6; 
+  }
+  .links a{
+    transition: 0.3s;
+  }
+  .navbar-nav a:hover{
+    color: var(--main-color) !important;
+  }
+  .links a:hover,
+  .navbar-nav a:hover{
+    color: var(--main-color) !important;
+  }
+  .links .active {
+    color: var(--main-color) !important;
+  }
+  @media (max-width:991px) {
+    .links a{
+          display: none !important;
+    }
+  }
+    .search button{
+      background-color: var(--main-color);
+      font-size: 20px;
+      
+    }
+    .search button:hover{
+      color:#fff !important;
+      background-color: #cf0516 !important;
+    }
+    .form-control:focus{
+      border: 1px solid var(--main-color) !important;
+    }
+/* navbar */
+/* header  */
+.header{
+  background-color:var(--section-color)!important ;
+
+}
+header{
+  height: calc(100vh - 75px);
+}
+header .text h1{
+  font-weight: 700;
+  text-shadow: 2px 1px 1px black;
+}
+@media (max-width:767px) {
+  header .image{
+    margin-top: 10px;
+    width: 250px;
+    height: 250px;
+  }
+  header .image>span{
+    margin-top:15px !important;
+  }
+  
+}
+@media (max-width:767px) {
+  header .text h1 {
+      font-size: 2rem;
+    }
+}
+header .text span{
+  color: var(--main-color);
+}
+header .btn-portfolio{
+  width: fit-content;
+  background-color: var(--main-color);
+  color: #fff !important;
+  transition: 0.3s;
+
+}
+header .btn-portfolio:hover{
+  color: var(--main-color) !important;
+  background-color: #fff var(--section-color);
+}
+ .facebook , .twitter, .instagram, .github{
+  transition: 0.3s;
+ }
+ header .icons{
+  margin-left: -15px;
+ }
+header .icons .facebook:hover{
+  color: #4267B2 !important;
+}
+header .icons .twitter:hover{
+  color: #00acee !important;
+}
+header .icons .instagram:hover{
+  color: #E1306C !important;
+}
+header .icons .github:hover{
+  color: #171515 !important;
+}
+/* header  */
+/* portfolio */
+.portfolio {
+  min-height: calc(100vh - 80px);
+}
+ .section-title p{
+  color: var(--main-color);
+}
+ .section-title h2{
+  position: relative;
+}
+ .section-title h2::after{
+  content: '';
+  position: absolute;
+  width: 10%;
+  height: 4px;
+  border-radius: 8px;
+  background-color: var(--dark-mode);
+  bottom: -2rem;
+  transition: 0.3s;
+}
+ .section-title:hover h2::after{
+  width: 15%;
+  background-color: var(--main-color);
+}
+.portfolio .all-projects{
+  flex-wrap: wrap;
+}
+.portfolio .all-projects button{
+background-color: transparent !important;
+color: black !important;
+border: none !important;
+border-radius: 0;
+white-space: nowrap;
+transition: 0.3s;
+}
+.portfolio .all-projects button:hover{
+  color: var(--main-color) !important;
+}
+.all-projects button.active{
+  color: var(--main-color) !important;
+  border-bottom: 2px solid var(--main-color) !important;
+}
+.portfolio .box{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  cursor: pointer;
+    }
+  .portfolio .box img{
+  object-fit: cover;
+  filter: blur(0x);
+  transition: 0.6s;
+  }
+  .portfolio .box:hover img{
+  filter: blur(4px);
+  }
+  .portfolio .box img{
+  border-radius: 10px;
+  }
+    .portfolio .box .theTitle{
+    position: absolute;
+    top:-40px;
+    background-color:#d6434fb7;
+    border-radius: 6px;
+    transition: 0.3s;
+    }
+    .portfolio .box:hover .theTitle{
+      top: 0%;
+    }
+  .portfolio .box .title{
+  position: absolute;
+  background-color: var(--main-color);
+  color: #fff !important;
+  transition: 0.3s;
+  bottom: -100px ; 
+  }
+    .portfolio .box:hover .title{
+      bottom: 40%;
+    }
+  .portfolio .box .title:hover{
+  background-color: #d13945;
+  }
+/* portfolio */
+/* About me  */
+
+.about{
+  min-height: 100vh;
+  background-color: var(--section-color);
+}
+.about .text{
+  clip-path: polygon(0 100%, 0 0, 100% 0);background-color: var(--main-color);
+  padding: 20px;
+}
+@media (max-width:991px) {
+  .about .text {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 100% 100%, 0% 100%);
+  border-radius: 14px;
+  margin-right: 14px;
+  padding: 40px;
+}
+}
+@media (max-width:991px) {
+  .about .about-content {
+  align-items: center ;
+}
+}
+@media (max-width:767px) {
+  .about .text h2,
+  .about .text p{
+      font-size: 16px !important;
+    }
+}
+.about .text p{
+  font-weight: 600;
+}
+.about .img img{
+  border-radius: 50%;
+}
+/* About me  */
