--- a/styles/globals.css
+++ b/styles/globals.css
@@ -121,6 +121,7 @@
   font-size: 18px;
   display: flex;
   align-items: center;
+  font-weight: 500;
   }
   .navbar-nav a:hover{
   color: var(--main-color) !important;
