--- a/styles/globals.css
+++ b/styles/globals.css
@@ -301,23 +301,31 @@
   }
   .portfolio .box .theTitle{
   position: absolute;
-  top:-40px;
-  background-color:#d6434fb7;
-  border-radius: 6px;
-  transition: 0.3s;
+  background-color:var(--main-color);
+  font-size: 16px;
+  transform: rotate(-35deg);
+  top: 25px;
+  left: -30%;
+  opacity: 0;
+  border-radius: px;
+  transition: 0.6s;
   }
   .portfolio .box:hover .theTitle{
-  top: 0%;
+
+  opacity: 1;
   }
   .portfolio .box .title{
   position: absolute;
+  font-size: 14px;
   background-color: var(--main-color);
   color: #fff !important;
   transition: 0.3s;
   bottom: -100px ; 
   }
   .portfolio .box:hover .title{
-  bottom: 40%;
+  bottom:20%;
+
+
   }
   .portfolio .box .title:hover{
   background-color: #d13945;
@@ -358,5 +366,9 @@
   }
   .about .img img{
   border-radius: 50%;
+  }
+  .about .skills .my-technology{
+    background-color: #9c1515;
+    border-radius: 14px;
   }
   /* About me  */
