--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,9 @@
   .main-color{
   color:var(--main-color) !important
   }
+  .bg-main{
+  background-color:var(--main-color) !important
+  }
 
   html,
   body {
@@ -55,11 +58,11 @@
   background-color: var(--dark-mode)
   }
   .dark header .btn-cv{
-    border :1px solid #fff;
+  border :1px solid #fff;
   } 
   .dark header .btn-cv:hover{
   color: #fff !important; 
- } 
+  } 
   .dark header .text{
   color: #fff;
   }
@@ -97,10 +100,39 @@
   background-color: #7b1111 !important;
   }
   .dark .about .skills .box {
-      background-color: #282d30;
-      color:#fff;
-    }
+  background-color: #282d30;
+  color:#fff;
+  }
   /* dark mode for about  */
+
+  /* dark mode for contact  */
+  .dark .contact {
+  background-color: var(--dark-mode);
+  }
+  .dark .contact_option{
+  background-color: #282d30 !important;
+  border: none !important;
+  }
+  .dark .contact_option:hover{
+  background-color: rgb(52, 58, 62) !important;
+  }
+  .dark .contact h2,
+  .dark .contact .contact_option p,
+  .dark .contact .contact_option h3
+  {
+  color: #fff !important;
+  }
+  .dark form input , 
+  .dark form textarea{
+  background-color:rgb(52, 58, 62) ;
+  color: #fff !important;
+  }
+        .dark form input:focus,
+        .dark form textarea:focus{
+  /* background-color: rgb(52, 58, 62) !important; */
+        }
+  /* dark mode for contact  */
+
   /* dark mode  */
   /* navbar */
   .navbar{
@@ -208,16 +240,16 @@
   background-color: var(--main-color);
   color: #fff !important;
   transition: 0.3s;
-    
+
   }
   header .btn-cv{
-    background-color: var(--dark-mode);
-    color: #fff !important;
-    transition: 0.3s;
+  background-color: var(--dark-mode);
+  color: #fff !important;
+  transition: 0.3s;
   }
   header .btn-cv:hover{
-    color: var(--dark-mode) !important;
-    background-color:transparent !important;
+  color: var(--dark-mode) !important;
+  background-color:transparent !important;
   }
   header .btn-portfolio:hover{
   color: var(--main-color) !important;
@@ -314,8 +346,8 @@
   transition: 0.6s;
   }
   .portfolio .box:hover .theTitle{
-    top: 0;
-    left: 0;
+  top: 0;
+  left: 0;
   opacity: 1;
   }
   .portfolio .box .title{
@@ -372,14 +404,52 @@
   border-radius: 50%;
   }
   .about .skills .box{
-    background-color: #fff;
-    color: var(--dark-mode);
-    border-radius: 14px;
+  background-color: #fff;
+  color: var(--dark-mode);
+  border-radius: 14px;
   }
   .about .skills .box svg{
-color:var(--main-color);
+  color:var(--main-color);
   }
   .about .skills .my-technology p{
-white-space: nowrap;
+  white-space: nowrap;
   }
   /* About me  */
+  /* contace me  */
+  .contact {
+  min-height: calc(100vh - 89px);
+  background-color: var(--section-color);
+  }
+  .contact .contact_option{
+  background-color: #fff;
+  border-radius: 14px;
+  transition: 0.3s;
+  }
+  .contact .contact_option:hover{
+  background-color: #eee ;
+  }
+  .contact .contact_option svg{
+  color: var(--main-color);
+  font-size: 22px;
+  }
+  .contact form input:first-of-type, 
+  .contact form textarea{
+  text-transform: capitalize;
+  }
+  .contact form input , .contact form textarea{
+  width: 100%;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  border: 2px solid #dbdbdb ;
+  resize: none;
+  background-color: transparent !important;
+  }
+  .contact form button:hover{
+  background-color: #c73b46 !important;
+  }
+  .contact form input:focus , .contact form textarea:focus{
+  border: 2px solid #dbdbdb !important;
+  outline: none;
+  }
+
+  /* contace me  */
