--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,10 @@
   .dark .offcanvas {
   background-color: var(--dark-mode);
   }
+  .dark .offcanvas .form-control:focus{
+  background-color: var(--dark-mode);
+  color: #fff !important;
+  }
   .dark .btn-close {
   background-color: #fff !important;
   }
@@ -97,7 +101,13 @@
   background-color: var(--main-color) ;
   }
   .dark .about .text{
-  background-color: #7b1111 !important;
+  background-color: #282d30 !important;
+  color: #fff !important;
+
+  }
+  .dark .about .text .about-me{
+  color: rgba(255, 255, 255, 0.753) !important;
+
   }
   .dark .about .skills .box {
   background-color: #282d30;
@@ -127,12 +137,6 @@
   background-color:rgb(52, 58, 62) ;
   color: #fff !important;
   }
-        .dark form input:focus,
-        .dark form textarea:focus{
-  /* background-color: rgb(52, 58, 62) !important; */
-        }
-  /* dark mode for contact  */
-
   /* dark mode  */
   /* navbar */
   .navbar{
@@ -157,7 +161,6 @@
   font-weight: 600;;
   letter-spacing: 1.6; 
   }
-
   .links a{
   transition: 0.3s;
   font-size: 18px;
@@ -165,6 +168,9 @@
   align-items: center;
   font-weight: 500;
   }
+      .links button {
+      margin-top: -3px;
+      }
   .navbar-nav a:hover{
   color: var(--main-color) !important;
   }
@@ -177,10 +183,18 @@
   color: var(--main-color) !important;
   }
   @media (max-width:991px) {
+
   .links a{
   display: none !important;
   }
   }
+  @media (min-width:991px) {
+
+   .navbar-toggler {
+  display: none !important;
+  }
+  }
+
   .search button{
   background-color: var(--main-color);
   font-size: 20px;
@@ -199,7 +213,7 @@
   background-color:var(--section-color)!important ;
   }
   header{
-  min-height: calc(100vh - 75px);
+  min-height: calc(100vh - 90px);
   }
   header .text h1{
   font-weight: 700;
@@ -340,16 +354,11 @@
   background-color:var(--main-color);
   font-size: 16px;
   top: -25px;
-  /* left: -30%; */
   opacity: 0;
   border-radius: px;
   transition: 0.6s;
   }
-  .portfolio .box:hover .theTitle{
-  top: 0;
-  left: 0;
-  opacity: 1;
-  }
+
   .portfolio .box .title{
   position: absolute;
   font-size: 14px;
@@ -360,8 +369,11 @@
   }
   .portfolio .box:hover .title{
   bottom:20%;
-
-
+}
+    .portfolio .box:hover .theTitle {
+        top: 0;
+        left: 0;
+        opacity: 1;
   }
   .portfolio .box .title:hover{
   background-color: #d13945;
@@ -374,18 +386,15 @@
   background-color: var(--section-color);
   }
   .about .text{
-  clip-path: polygon(0% 0%, 55% 0, 100% 0%, 17% 100%, 0% 100%);
-  background-color:#9c1515;
-  padding: 20px;
-  }
-  @media (max-width:991px) {
-  .about .text {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 100% 100%, 0% 100%);
+  background-color:#fff;
+  color: var(--dark-mode) !important;
   border-radius: 14px;
-  margin-right: 14px;
-  padding: 40px;
-  }
-  }
+  padding: 20px;
+}
+.about .text .about-me{
+
+      color: rgba(0, 0, 0, 0.75) !important;;
+}
   @media (max-width:991px) {
   .about .about-content {
   align-items: center ;
