--- a/styles/globals.css
+++ b/styles/globals.css
@@ -388,6 +388,7 @@
   background-color: #fff;
   border-radius: 14px;
   transition: 0.3s;
+  padding:14px 0!important;
   }
   .contact .contact_option:hover{
   background-color: #eee ;
@@ -446,12 +447,6 @@
   @media (max-width:991px) {
   .about .about-content {
   align-items: center ;
-  }
-  }
-  @media (max-width:767px) {
-  .about .text h2,
-  .about .text p{
-  font-size: 16px !important;
   }
   }
   .about .text p{
