--- a/styles/globals.css
+++ b/styles/globals.css
@@ -358,14 +358,15 @@
   object-fit: cover;
   filter: blur(0x);
   transition: 0.6s;
-  border-radius: 50%;
   object-fit: contain;
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
 }
   .portfolio .box:hover img{
   filter: blur(4px);
-  }
-  .portfolio .box img{
-  border-radius: 10px;
   }
   .portfolio .box .theTitle{
   position: absolute;
